tests/snapshots/snapshots__multimap_with_macro_use.snap
---
source: tests/snapshots.rs
expression: output
---
/*#[macro_use]
extern crate multimap as _;*/
pub use __cargo_equip::prelude::*;

use crate::__cargo_equip::macros::multimap::*;

use multimap::MultiMap;

fn main() {
    let _: MultiMap<(), ()> = multimap!();
}

// The following code was expanded by `cargo-equip`.

///  # Bundled libraries
/// 
///  - `registry+https://github.com/rust-lang/crates.io-index#multimap@0.8.3` licensed under `MIT/Apache-2.0` as `crate::__cargo_equip::crates::multimap`
/// 
///  # License and Copyright Notices
/// 
///  - `registry+https://github.com/rust-lang/crates.io-index#multimap@0.8.3`
/// 
///      ```text
///      Copyright (c) 2016 multimap developers
/// 
///      Permission is hereby granted, free of charge, to any
///      person obtaining a copy of this software and associated
///      documentation files (the "Software"), to deal in the
///      Software without restriction, including without
///      limitation the rights to use, copy, modify, merge,
///      publish, distribute, sublicense, and/or sell copies of
///      the Software, and to permit persons to whom the Software
///      is furnished to do so, subject to the following
///      conditions:
/// 
///      The above copyright notice and this permission notice
///      shall be included in all copies or substantial portions
///      of the Software.
/// 
///      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF
///      ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
///      TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
///      PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT
///      SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
///      CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
///      OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR
///      IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
///      DEALINGS IN THE SOFTWARE.
///      ```
#[cfg_attr(any(), rustfmt::skip)]
#[allow(unused)]
mod __cargo_equip {
    pub(crate) mod crates {
        pub mod multimap {pub use crate::__cargo_equip::macros::multimap::*;use std::borrow::Borrow;use std::collections::HashMap;use std::collections::hash_map::{Keys,IntoIter,RandomState};use std::fmt::{self,Debug};use std::iter::{Iterator,IntoIterator,FromIterator};use std::hash::{Hash,BuildHasher};use std::ops::Index;pub use std::collections::hash_map::Iter as IterAll;pub use std::collections::hash_map::IterMut as IterAllMut;pub use entry::{Entry,OccupiedEntry,VacantEntry};mod entry{use std::collections::hash_map::OccupiedEntry as HashMapOccupiedEntry;use std::collections::hash_map::VacantEntry as HashMapVacantEntry;pub struct OccupiedEntry<'a,K:'a,V:'a>{pub inner:HashMapOccupiedEntry<'a,K,Vec<V>>,}pub struct VacantEntry<'a,K:'a,V:'a>{pub inner:HashMapVacantEntry<'a,K,Vec<V>>,}pub enum Entry<'a,K:'a,V:'a>{Occupied(OccupiedEntry<'a,K,V>),Vacant(VacantEntry<'a,K,V>),}impl<'a,K:'a,V:'a>OccupiedEntry<'a,K,V>{pub fn get(&self)->&V{&self.inner.get()[0]}pub fn get_vec(&self)->&Vec<V>{self.inner.get()}pub fn get_mut(&mut self)->&mut V{&mut self.inner.get_mut()[0]}pub fn get_vec_mut(&mut self)->&mut Vec<V>{self.inner.get_mut()}pub fn into_mut(self)->&'a mut V{&mut self.inner.into_mut()[0]}pub fn into_vec_mut(self)->&'a mut Vec<V>{self.inner.into_mut()}pub fn insert(&mut self,value:V){self.get_vec_mut().push(value);}pub fn insert_vec(&mut self,values:Vec<V>){self.get_vec_mut().extend(values);}pub fn remove(self)->Vec<V>{self.inner.remove()}}impl<'a,K:'a,V:'a>VacantEntry<'a,K,V>{pub fn insert(self,value:V)->&'a mut V{&mut self.inner.insert(vec![value])[0]}pub fn insert_vec(self,values:Vec<V>)->&'a mut Vec<V>{self.inner.insert(values)}}impl<'a,K:'a,V:'a>Entry<'a,K,V>{pub fn or_insert(self,default:V)->&'a mut V{match self{Entry::Occupied(entry)=>entry.into_mut(),Entry::Vacant(entry)=>entry.insert(default),}}pub fn or_insert_vec(self,defaults:Vec<V>)->&'a mut Vec<V>{match self{Entry::Occupied(entry)=>entry.into_vec_mut(),Entry::Vacant(entry)=>entry.insert_vec(defaults),}}}}#[derive(Clone)]pub struct MultiMap<K,V,S=RandomState>{inner:HashMap<K,Vec<V>,S>,}impl<K,V>MultiMap<K,V>where K:Eq+Hash{pub fn new()->MultiMap<K,V>{MultiMap{inner:HashMap::new()}}pub fn with_capacity(capacity:usize)->MultiMap<K,V>{MultiMap{inner:HashMap::with_capacity(capacity)}}}impl<K,V,S>MultiMap<K,V,S>where K:Eq+Hash,S:BuildHasher,{pub fn with_hasher(hash_builder:S)->MultiMap<K,V,S>{MultiMap{inner:HashMap::with_hasher(hash_builder)}}pub fn with_capacity_and_hasher(capacity:usize,hash_builder:S)->MultiMap<K,V,S>{MultiMap{inner:HashMap::with_capacity_and_hasher(capacity,hash_builder)}}pub fn insert(&mut self,k:K,v:V){match self.entry(k){Entry::Occupied(mut entry)=>{entry.get_vec_mut().push(v);}Entry::Vacant(entry)=>{entry.insert_vec(vec![v]);}}}pub fn insert_many<I:IntoIterator<Item=V>>(&mut self,k:K,v:I){match self.entry(k){Entry::Occupied(mut entry)=>{entry.get_vec_mut().extend(v);}Entry::Vacant(entry)=>{entry.insert_vec(v.into_iter().collect::<Vec<_>>());}}}pub fn insert_many_from_slice(&mut self,k:K,v:&[V])where V:Clone,{match self.entry(k){Entry::Occupied(mut entry)=>{entry.get_vec_mut().extend_from_slice(v);}Entry::Vacant(entry)=>{entry.insert_vec(v.to_vec());}}}pub fn contains_key<Q:?Sized>(&self,k:&Q)->bool where K:Borrow<Q>,Q:Eq+Hash{self.inner.contains_key(k)}pub fn len(&self)->usize{self.inner.len()}pub fn remove<Q:?Sized>(&mut self,k:&Q)->Option<Vec<V>>where K:Borrow<Q>,Q:Eq+Hash{self.inner.remove(k)}pub fn get<Q:?Sized>(&self,k:&Q)->Option<&V>where K:Borrow<Q>,Q:Eq+Hash{self.inner.get(k).map(|v|&v[0])}pub fn get_mut<Q:?Sized>(&mut self,k:&Q)->Option<&mut V>where K:Borrow<Q>,Q:Eq+Hash{self.inner.get_mut(k).map(|v|v.get_mut(0).unwrap())}pub fn get_vec<Q:?Sized>(&self,k:&Q)->Option<&Vec<V>>where K:Borrow<Q>,Q:Eq+Hash{self.inner.get(k)}pub fn get_vec_mut<Q:?Sized>(&mut self,k:&Q)->Option<&mut Vec<V>>where K:Borrow<Q>,Q:Eq+Hash{self.inner.get_mut(k)}pub fn is_vec<Q:?Sized>(&self,k:&Q)->bool where K:Borrow<Q>,Q:Eq+Hash{match self.get_vec(k){Some(val)=>{val.len()>1}None=>false}}pub fn capacity(&self)->usize{self.inner.capacity()}pub fn is_empty(&self)->bool{self.inner.is_empty()}pub fn clear(&mut self){self.inner.clear();}pub fn keys<'a>(&'a self)->Keys<'a,K,Vec<V>>{self.inner.keys()}pub fn iter(&self)->Iter<K,V>{Iter{inner:self.inner.iter()}}pub fn iter_mut(&mut self)->IterMut<K,V>{IterMut{inner:self.inner.iter_mut()}}pub fn iter_all(&self)->IterAll<K,Vec<V>>{self.inner.iter()}pub fn iter_all_mut(&mut self)->IterAllMut<K,Vec<V>>{self.inner.iter_mut()}pub fn entry(&mut self,k:K)->Entry<K,V>{use std::collections::hash_map::Entry as HashMapEntry;match self.inner.entry(k){HashMapEntry::Occupied(entry)=>Entry::Occupied(OccupiedEntry{inner:entry}),HashMapEntry::Vacant(entry)=>Entry::Vacant(VacantEntry{inner:entry}),}}pub fn retain<F>(&mut self,mut f:F)where F:FnMut(&K,&V)->bool{for(key,vector)in&mut self.inner{vector.retain(|ref value|f(key,value));}self.inner.retain(|&_,ref v|!v.is_empty());}}impl<'a,K,V,S,Q:?Sized>Index<&'a Q>for MultiMap<K,V,S>where K:Eq+Hash+Borrow<Q>,Q:Eq+Hash,S:BuildHasher,{type Output=V;fn index(&self,index:&Q)->&V{self.inner.get(index).map(|v|&v[0]).expect("no entry found for key")}}impl<K,V,S>Debug for MultiMap<K,V,S>where K:Eq+Hash+Debug,V:Debug,S:BuildHasher{fn fmt(&self,f:&mut fmt::Formatter)->fmt::Result{f.debug_map().entries(self.iter_all()).finish()}}impl<K,V,S>PartialEq for MultiMap<K,V,S>where K:Eq+Hash,V:PartialEq,S:BuildHasher{fn eq(&self,other:&MultiMap<K,V,S>)->bool{if self.len()!=other.len(){return false;}self.iter_all().all(|(key,value)|other.get_vec(key).map_or(false,|v|*value==*v))}}impl<K,V,S>Eq for MultiMap<K,V,S>where K:Eq+Hash,V:Eq,S:BuildHasher{}impl<K,V,S>Default for MultiMap<K,V,S>where K:Eq+Hash,S:BuildHasher+Default{fn default()->MultiMap<K,V,S>{MultiMap{inner:Default::default()}}}impl<K,V,S>FromIterator<(K,V)>for MultiMap<K,V,S>where K:Eq+Hash,S:BuildHasher+Default{fn from_iter<T:IntoIterator<Item=(K,V)>>(iterable:T)->MultiMap<K,V,S>{let iter=iterable.into_iter();let hint=iter.size_hint().0;let mut multimap=MultiMap::with_capacity_and_hasher(hint,S::default());for(k,v)in iter{multimap.insert(k,v);}multimap}}impl<'a,K,V,S>IntoIterator for&'a MultiMap<K,V,S>where K:Eq+Hash,S:BuildHasher{type Item=(&'a K,&'a Vec<V>);type IntoIter=IterAll<'a,K,Vec<V>>;fn into_iter(self)->IterAll<'a,K,Vec<V>>{self.iter_all()}}impl<'a,K,V,S>IntoIterator for&'a mut MultiMap<K,V,S>where K:Eq+Hash,S:BuildHasher{type Item=(&'a K,&'a mut Vec<V>);type IntoIter=IterAllMut<'a,K,Vec<V>>;fn into_iter(self)->IterAllMut<'a,K,Vec<V>>{self.inner.iter_mut()}}impl<K,V,S>IntoIterator for MultiMap<K,V,S>where K:Eq+Hash,S:BuildHasher{type Item=(K,Vec<V>);type IntoIter=IntoIter<K,Vec<V>>;fn into_iter(self)->IntoIter<K,Vec<V>>{self.inner.into_iter()}}impl<K,V,S>Extend<(K,V)>for MultiMap<K,V,S>where K:Eq+Hash,S:BuildHasher{fn extend<T:IntoIterator<Item=(K,V)>>(&mut self,iter:T){for(k,v)in iter{self.insert(k,v);}}}impl<'a,K,V,S>Extend<(&'a K,&'a V)>for MultiMap<K,V,S>where K:Eq+Hash+Copy,V:Copy,S:BuildHasher{fn extend<T:IntoIterator<Item=(&'a K,&'a V)>>(&mut self,iter:T){self.extend(iter.into_iter().map(|(&key,&value)|(key,value)));}}impl<K,V,S>Extend<(K,Vec<V>)>for MultiMap<K,V,S>where K:Eq+Hash,S:BuildHasher{fn extend<T:IntoIterator<Item=(K,Vec<V>)>>(&mut self,iter:T){for(k,values)in iter{match self.entry(k){Entry::Occupied(mut entry)=>{entry.get_vec_mut().extend(values);}Entry::Vacant(entry)=>{entry.insert_vec(values);}}}}}impl<'a,K,V,S>Extend<(&'a K,&'a Vec<V>)>for MultiMap<K,V,S>where K:Eq+Hash+Copy,V:Copy,S:BuildHasher{fn extend<T:IntoIterator<Item=(&'a K,&'a Vec<V>)>>(&mut self,iter:T){self.extend(iter.into_iter().map(|(&key,values)|(key,values.to_owned())));}}#[derive(Clone)]pub struct Iter<'a,K:'a,V:'a>{inner:IterAll<'a,K,Vec<V>>,}impl<'a,K,V>Iterator for Iter<'a,K,V>{type Item=(&'a K,&'a V);fn next(&mut self)->Option<(&'a K,&'a V)>{self.inner.next().map(|(k,v)|(k,&v[0]))}fn size_hint(&self)->(usize,Option<usize>){self.inner.size_hint()}}impl<'a,K,V>ExactSizeIterator for Iter<'a,K,V>{fn len(&self)->usize{self.inner.len()}}pub struct IterMut<'a,K:'a,V:'a>{inner:IterAllMut<'a,K,Vec<V>>,}impl<'a,K,V>Iterator for IterMut<'a,K,V>{type Item=(&'a K,&'a mut V);fn next(&mut self)->Option<(&'a K,&'a mut V)>{self.inner.next().map(|(k,v)|(k,&mut v[0]))}fn size_hint(&self)->(usize,Option<usize>){self.inner.size_hint()}}impl<'a,K,V>ExactSizeIterator for IterMut<'a,K,V>{fn len(&self)->usize{self.inner.len()}}#[macro_export]macro_rules!__cargo_equip_macro_def_multimap_multimap{(@replace_with_unit$_t:tt)=>{()};(@count$($key:expr),*)=>{<[()]>::len(&[$($crate::__cargo_equip::crates::multimap::multimap!{@replace_with_unit$key}),*])};($($key:expr=>$value:expr),*$(,)?)=>{{let mut map=$crate::__cargo_equip::crates::multimap::MultiMap::with_capacity($crate::__cargo_equip::crates::multimap::multimap!{@count$($key),*});$(map.insert($key,$value);)*map}}}macro_rules!multimap{($($tt:tt)*)=>(crate::__cargo_equip_macro_def_multimap_multimap!{$($tt)*})}}
    }

    pub(crate) mod macros {
        pub mod multimap {pub use crate::__cargo_equip_macro_def_multimap_multimap as multimap;}
    }

    pub(crate) mod prelude {pub use crate::__cargo_equip::crates::*;}

    mod preludes {
        pub mod multimap {}
    }
}
